--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,66 @@ color: black;
 }
 
 /*  ============ END HERO  ============ */
+
+/*  ============ Advantages "Power"============ */
+.power-title{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.143;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #212121;
+}
+.power-subtitle{
+font-weight: 400;
+font-size: 14px;
+line-height: 1.714;
+letter-spacing: 0.03em;
+color: #757575;
+}
+/*  ============ End Advantages "Power" ============ */
+
+/*  ============ About us ============ */
+.what-we-do{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.167;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+/*  ============ End About us ============ */
+
+/*  ============ Our team ============ */
+.our-team{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.167;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121; 
+}
+.name{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.188;
+*/text-align: center; возможно,потом пригодится*/
+letter-spacing: 0.03em;
+color: #212121;
+}
+.position{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.188;
+*/text-align: center;*/
+letter-spacing: 0.03em;
+color: #757575;
+}
+/*  ============ End Our team ============ */
+
+
 /*  ============ FOOTER CONTACTS  ============ */
+
 .footer-logo {
   font-family: Raleway;
   font-weight: 700;
