--- a/css/styles.css
+++ b/css/styles.css
@@ -152,5 +152,36 @@ color: #757575;
   letter-spacing: 0.03em;
   color: black;
   /*сделать белый когда будет фон */
+}
 
   /*  ============ END FOOTER CONTACTS  ============ */
+
+/*  ============ main content portfolio page  ============ */
+  .filter {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+.filter:hover,
+.filter:focus,
+.filter:active {
+  color: #ffffff;
+}
+.project-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+.project-type {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.875;
+letter-spacing: 0.03em;
+color: #757575;
+
+/*  ============end  main content portfolio page  ============ */
