--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --main-text-color:#212121;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -15,7 +19,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 1.143;
 letter-spacing: 0.02em;
-color: #212121;
+color: var(--main-text-color);
 }
 .logo {
   font-family: Raleway;
@@ -74,7 +78,7 @@ font-size: 14px;
 line-height: 1.143;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #212121;
+color: var(--main-text-color);
 }
 .power-subtitle{
 font-weight: 400;
@@ -92,7 +96,7 @@ font-size: 36px;
 line-height: 1.167;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
+color: var(--main-text-color);
 }
 /*  ============ End About us ============ */
 
@@ -103,7 +107,7 @@ font-size: 36px;
 line-height: 1.167;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121; 
+color: var(--main-text-color); 
 }
 .name{
 font-weight: 500;
@@ -163,7 +167,7 @@ color: #757575;
   line-height: 1.625;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--main-text-color);
 }
 .filter:hover,
 .filter:focus,
@@ -175,7 +179,7 @@ color: #757575;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: #212121;
+  color: var(--main-text-color);
 }
 .project-type {
 font-weight: 400;
